chore: added google auth
