# schemas/auth.go
@@ -29,6 +29,10 @@ type LoginSchema struct {
 	Password			string				`json:"password" validate:"required" example:"password"`
 }
 
+type SocialLoginSchema struct {
+	Token				string				`json:"token" validate:"required,min=10" example:"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6InNpbXBsZWlkIiwiZXhwIjoxMjU3ODk0MzAwfQ.Ys_jP70xdxch32hFECfJQuvpvU5_IiTIN2pJJv68EqQ"`
+}
+
 type RefreshTokenSchema struct {
 	Refresh			string					`json:"refresh" validate:"required" example:"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6InNpbXBsZWlkIiwiZXhwIjoxMjU3ODk0MzAwfQ.Ys_jP70xdxch32hFECfJQuvpvU5_IiTIN2pJJv68EqQ"`
 }
